fix css bug and add support for whitespace in place for tab

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -105,6 +105,7 @@
   max-width: 100%;
   width: 70vh;
   white-space: pre-wrap;
+  color: #33D17A;
 }
 
 .card:hover,
